# walink

./: README.md  go.mod
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt
cpp/include/: walink.h
cpp/src/: walink.cc  walink.cpp
cpp/tests/: walink_test_api.cpp
go/cmd/integration-test/: main.go
go/wlvalue/: callback.go  callback_stub.go  callback_wasm.go  msgpack.go  walink.go  walink_test.go
node/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rolldown.config.mjs  rolldown.config.mts  rollup.config.mts  tsconfig.json
node/src/: index.ts  walink.ts  wlvalue.ts
node/test/: go_integration.test.ts  walink.integration.test.ts  walinkSampleApi.ts
